[gd_scene load_steps=17 format=4 uid="uid://cmgn7rkp0btkb"]

[ext_resource type="PackedScene" uid="uid://brqbx0dxbd6ex" path="res://scenes/tile_map.tscn" id="1_014kd"]
[ext_resource type="PackedScene" uid="uid://c5tdcjg1dh3hr" path="res://scenes/player.tscn" id="2_4nkto"]
[ext_resource type="Script" uid="uid://c3yupseyu3raf" path="res://scripts/npc.gd" id="6_2y5yt"]
[ext_resource type="Texture2D" uid="uid://bj1hueeddmwu8" path="res://assets/graphics/Character_animation/monsters_idle/skeleton1/v2/skeleton_v2_1.png" id="6_e3sih"]
[ext_resource type="Resource" uid="uid://cbfq0n4mbwn0d" path="res://quests/quest_1.tres" id="7_2os1m"]
[ext_resource type="Texture2D" uid="uid://va2naqggda0j" path="res://assets/graphics/Character_animation/monsters_idle/skeleton1/v2/skeleton_v2_2.png" id="7_2y5yt"]
[ext_resource type="PackedScene" uid="uid://ur4ndlxo0erv" path="res://scenes/torch.tscn" id="7_pa8r4"]
[ext_resource type="Texture2D" uid="uid://cdsp56hucv4s" path="res://assets/graphics/Character_animation/monsters_idle/skeleton1/v2/skeleton_v2_3.png" id="8_2os1m"]
[ext_resource type="Texture2D" uid="uid://dkvklb8q6kacy" path="res://assets/graphics/items and trap_animation/chest/chest_3.png" id="8_15mv3"]
[ext_resource type="Script" uid="uid://dmbgub74eymf2" path="res://scripts/change_level.gd" id="9_e3sih"]
[ext_resource type="Texture2D" uid="uid://bog4o6kgusq7h" path="res://assets/graphics/Character_animation/monsters_idle/skeleton1/v2/skeleton_v2_4.png" id="9_go7sj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e3sih"]
size = Vector2(12, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2y5yt"]
size = Vector2(5, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_2y5yt"]
radius = 28.09

[sub_resource type="SpriteFrames" id="SpriteFrames_7gny6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_e3sih")
}, {
"duration": 1.0,
"texture": ExtResource("7_2y5yt")
}, {
"duration": 1.0,
"texture": ExtResource("8_2os1m")
}, {
"duration": 1.0,
"texture": ExtResource("9_go7sj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_e3sih"]
radius = 4.0

[node name="Level1" type="Node2D"]
y_sort_enabled = true

[node name="TileMap" parent="." instance=ExtResource("1_014kd")]
tile_map_data = PackedByteArray("AAABAAEAAAABAAEAAAABAAIAAAABAAEAAAABAAMAAAABAAEAAAABAAQAAAABAAEAAAACAAQAAAADAAMAAAADAAQAAAADAAEAAAAEAAQAAAABAAEAAAAFAAQAAAABAAEAAAAFAAMAAAABAAEAAAAGAAMAAAABAAEAAAAHAAMAAAABAAEAAAAHAAQAAAABAAEAAAAGAAQAAAABAAEAAAADAAMAAAABAAEAAAACAAMAAAABAAEAAAAEAAMAAAACAAIAAAAFAAIAAAACAAIAAAAGAAIAAAABAAEAAAAHAAIAAAABAAEAAAAHAAEAAAADAAMAAAAGAAEAAAABAAEAAAAFAAEAAAABAAEAAAAEAAEAAAADAAEAAAADAAEAAAABAAEAAAACAAEAAAABAAEAAAACAAIAAAACAAIAAAADAAIAAAABAAEAAAAEAAIAAAABAAEAAAABAAAAAAABAAAAAAACAAAAAAACAAAAAAADAAAAAAADAAAAAAAEAAAAAAABAAAAAAAFAAAAAAADAAAAAAAGAAAAAAACAAAAAAAHAAAAAAABAAAAAAAIAAEAAAAFAAEAAAAIAAIAAAAFAAIAAAAAAAEAAAAAAAEAAAAAAAIAAAAAAAIAAAAAAAMAAAAAAAEAAAAHAAUAAAAEAAQAAAAGAAUAAAAEAAQAAAAFAAUAAAADAAQAAAAEAAUAAAAEAAQAAAADAAUAAAAEAAQAAAACAAUAAAACAAQAAAABAAUAAAAEAAQAAAAAAAQAAAAAAAMAAAAIAAUAAAAFAAQAAAAAAAUAAAAAAAQAAAAAAAAAAAAAAAAAAAAIAAAAAAAFAAAAAAAIAAMAAAAIAAcAAAAIAAQAAAAIAAcAAAA=")

[node name="TileMap2" parent="." instance=ExtResource("1_014kd")]
tile_map_data = PackedByteArray("AAABAAEAAAAEAAYAAAACAAQAAAAHAAcAAAAEAAAAAAAEAAcAAAAIAAMAAAAHAAQAAAAIAAQAAAAHAAUAAAA=")

[node name="Player" parent="." instance=ExtResource("2_4nkto")]
position = Vector2(41, 39)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.0062500215, 0.0037056135, 0.10858367, 1)

[node name="Torch" parent="." instance=ExtResource("7_pa8r4")]
position = Vector2(40, 7)

[node name="Torch2" parent="." instance=ExtResource("7_pa8r4")]
position = Vector2(104, 7)

[node name="Chest3" type="Sprite2D" parent="."]
position = Vector2(88, 40)
texture = ExtResource("8_15mv3")

[node name="StaticBody2D" type="StaticBody2D" parent="Chest3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chest3/StaticBody2D"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_e3sih")

[node name="Trigger" type="Area2D" parent="."]
position = Vector2(118, 65)
collision_layer = 0
collision_mask = 2
script = ExtResource("9_e3sih")
target_level = "uid://xyrv02u17w1f"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
position = Vector2(7.5, 0)
shape = SubResource("RectangleShape2D_2y5yt")

[node name="NPC" type="CharacterBody2D" parent="."]
position = Vector2(106, 37)
script = ExtResource("6_2y5yt")
quest_to_give = ExtResource("7_2os1m")

[node name="InteractArea" type="Area2D" parent="NPC"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/InteractArea"]
shape = SubResource("CircleShape2D_2y5yt")

[node name="QuestMarker" type="Label" parent="NPC"]
z_index = 10
offset_left = -5.0
offset_top = -28.0
offset_right = 35.0
offset_bottom = 6.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "!"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="NPC"]
sprite_frames = SubResource("SpriteFrames_7gny6")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC"]
position = Vector2(-3, 4)
shape = SubResource("CircleShape2D_e3sih")

[node name="CanvasLayer" type="CanvasLayer" parent="NPC"]

[connection signal="body_entered" from="Trigger" to="Trigger" method="_on_body_entered"]

[editable path="Player"]
